# Textovka

./: CMakeLists.txt  CteniPrikazu.cpp  CteniPrikazu.h  Hra.cpp  Hra.h  Mistnosti.cpp  Mistnosti.h  Prikaz.cpp  Prikaz.h  PrikazovySlova.cpp  PrikazovySlova.h  main.cpp
Pribeh/Kniha/: Příběh.docx  Strazni.docx  Strazni.rtf  Strazni.txt
Pribeh/Kniha/2. kapitola/: Ne.rar  kapitola 2.docx
Pribeh/Kniha/2. kapitola/Ano/: Příloha 2.docx
Pribeh/Kniha/2. kapitola/Ne/: Příloha 1.docx
